test/parser/types/reference_type.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: expected type specifier
  let x: &&number;
}

// CHECK: [[# @LINE + 1 ]]:11: error: expected type specifier
fn foo(): borrowed number{}

fn bar() {
  // CHECK: [[# @LINE + 1 ]]:10: error: expected type specifier
  let x: borrowed mut number;
  
  // CHECK: [[# @LINE + 1 ]]:10: error: expected type specifier
  mut x: borrowed number;
}

fn baz(x: borrowed number) {}
// CHECK: FunctionDecl: baz
// CHECK-NEXT:   ParamDecl: x
// CHECK-NEXT:     BorrowedModifier
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   Block
